--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,9 @@ dependencies:
   firebase_core: ^2.7.1
   firebase_auth: ^4.2.10
   cloud_firestore: ^4.4.4
-  get_it: ^7.2.0
-  go_router: ^6.2.0
-  bloc: ^8.1.1
-  flutter_bloc: ^8.1.2
+  get: ^4.6.5
   equatable: ^2.0.5
+  intl: ^0.17.0
   
 dev_dependencies:
   flutter_test:
