--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get: ^4.6.5
   equatable: ^2.0.5
   intl: ^0.17.0
+  custom_refresh_indicator: ^2.0.1
   
 dev_dependencies:
   flutter_test:
